--- a/basket.scss
+++ b/basket.scss
@@ -26,132 +26,139 @@ body {
 	margin: 0px auto;
 	border: solid 1px gray;
 	padding: 10px;
+}
 
-	header {
-		border: solid 1px gray;
+header {
+	border: solid 1px gray;
+}
+
+.content {
+	ul {
+		list-style: none;
+		margin: 0px 0px 10px 0px;
+		padding: 0px;
+		li {
+			border-bottom: solid 1px gray;
+		}
+		li:first-child::after {
+			@include breakpoint($small) {
+				content: ' - Small';
+			}
+			@include breakpoint($medium) {
+				content: ' - Medium';
+			}
+			@include breakpoint($from-medium) {
+				content: ' - Large';
+			}
+		}
+		li:last-child {
+			border-bottom: 0px;
+		}
 	}
+}
 
-	.content {
+.bar {
+	background-color: #7fd3de;
+}
+
+/* The footer IS the basket */
+footer {
+	// Keep contrained - The same as .page - Pull contraining code into a new class?
+	max-width: 960px;
+	margin: 0px auto;
+
+	border: solid 1px gray;
+	padding: 10px;
+	overflow: hidden;
+	section {
+		border: dashed 1px #aaa;
+		// When `medium`, put the sections onto one line - Widths are set below in the respective sections
+		@include breakpoint($from-small) {
+			// Temp: Change colour for `small`
+			background-color: yellow;
+			float: left;
+		}
+		// Temp: Change colour for `medium`
+		@include breakpoint($from-medium) {
+			background-color: pink;
+		}
+	}
+	section.passengerDetails {
+		text-align: left;
+		margin-bottom: 5px;
+		// Once bigger than `small`, the sections sit next to each other
+		@include breakpoint($from-small) {
+			width: 76%;
+		}
 		ul {
 			list-style: none;
 			margin: 0px 0px 10px 0px;
 			padding: 0px;
+			position: relative;
+			overflow: hidden;
 			li {
-				border-bottom: solid 1px gray;
+				padding-right: 5px;
+				//border: solid 1px black;
+				// For bigger than `small`, we want the items floated
+				@include breakpoint($from-small) {
+					float: left;
+				}
 			}
-			li:first-child::after {
-				@include breakpoint($small) {
-					content: ' - Small';
-				}
+			li:nth-child(2) {
+				// For `medium` we want to break the first price item
 				@include breakpoint($medium) {
-					content: ' - Medium';
-				}
-				@include breakpoint($from-medium) {
-					content: ' - Large';
+					clear: both;
+					//border: solid 1px yellow;
 				}
 			}
 			li:last-child {
-				border-bottom: 0px;
+				position: absolute;
+				bottom: 0px;
+				right: 0px;
+				float: right;
+				font-weight: bold;
+				padding-right: 0px;
 			}
 		}
 	}
-
-	/* The footer IS the basket */
-	footer {
-		border: solid 1px gray;
-		padding: 10px;
-		background-color: #7fd3de;
-		overflow: hidden;
-		section {
-			border: dashed 1px #aaa;
-			// When `medium`, put the sections onto one line - Widths are set below in the respective sections
-			@include breakpoint($from-small) {
-				// Temp: Change colour for `small`
-				background-color: yellow;
+	section.grandTotal {
+		@include breakpoint($from-small) {
+			float: none;
+			overflow: hidden;
+		}
+		>ul {
+			overflow: auto;
+			margin: 0px;
+			padding: 0px;
+			li {
+				display: block;
 				float: left;
-			}
-			// Temp: Change colour for `medium`
-			@include breakpoint($from-medium) {
-				background-color: pink;
-			}
-		}
-		section.passengerDetails {
-			text-align: left;
-			margin-bottom: 5px;
-			// Once bigger than `small`, the sections sit next to each other
-			@include breakpoint($from-small) {
-				width: 76%;
-			}
-			ul {
-				list-style: none;
-				margin: 0px 0px 10px 0px;
-				padding: 0px;
-				position: relative;
-				overflow: hidden;
-				li {
-					padding-right: 5px;
+				// Break and float right for `medium`
+				@include breakpoint($medium) {
+					float: right;
+					clear: both;
 					//border: solid 1px black;
-					// For bigger than `small`, we want the items floated
-					@include breakpoint($from-small) {
-						float: left;
-					}
-				}
-				li:nth-child(2) {
-					// For `medium` we want to break the first price item
-					@include breakpoint($medium) {
-						clear: both;
-						//border: solid 1px yellow;
-					}
-				}
-				li:last-child {
-					position: absolute;
-					bottom: 0px;
-					right: 0px;
-					float: right;
-					font-weight: bold;
-					padding-right: 0px;
 				}
 			}
-		}
-		section.grandTotal {
-			@include breakpoint($from-small) {
-				float: none;
-				overflow: hidden;
-			}
-			>ul {
-				overflow: auto;
-				margin: 0px;
-				padding: 0px;
-				li {
-					display: block;
-					float: left;
-					// Break and float right for `medium`
-					@include breakpoint($medium) {
-						float: right;
-						clear: both;
-						//border: solid 1px black;
-					}
-				}
-				li:last-child {
-					float: right;
-					font-weight: bold;
-					font-size: 1.4em;
-				}
+			li:last-child {
+				float: right;
+				font-weight: bold;
+				font-size: 1.4em;
 			}
 		}
-		button {
-			background-color: #ffdd0f;
-			box-shadow: 0 2px 0 0 #d2b82b, 0 3px 2px 0 rgba(0, 0, 0, 0.2);
-			color: #55565a;
-			border: 0;
-			border-radius: 4px;
-			display: inline-block;
-			font-size: 20px;
-			margin-top: 10px;
-			text-decoration: none;
-			text-transform: uppercase;
-			width: 100%;
-			height: 58px;
-		}
+	}
+	button {
+		background-color: #ffdd0f;
+		box-shadow: 0 2px 0 0 #d2b82b, 0 3px 2px 0 rgba(0, 0, 0, 0.2);
+		color: #55565a;
+		border: 0;
+		border-radius: 4px;
+		display: inline-block;
+		font-size: 20px;
+		margin-top: 10px;
+		text-decoration: none;
+		text-transform: uppercase;
+		width: 100%;
+		height: 58px;
 	}
 }
