--- a/basket2.scss
+++ b/basket2.scss
@@ -24,7 +24,7 @@ body {
 	max-width: 960px;
 	text-align: center;
 	margin: 0px auto;
-	border: solid 1px gray;
+	// border: solid 1px gray;
 	padding: 10px;
 }
 
@@ -63,34 +63,46 @@ header {
 
 /* The footer IS the basket */
 footer {
+
 	// Keep contrained - The same as .page - Pull contraining code into a new class?
 	max-width: 960px;
 	margin: 0px auto;
 
-	border: solid 1px gray;
 	padding: 10px;
-	overflow: hidden;
+	overflow: auto;
+
 	section {
-		border: dashed 1px #ccc;
 		// When `large`, put the sections onto one line - Width is set below in the first section
 		@include breakpoint($from-medium) {
 			float: left;
 		}
 	}
 	section.passengerDetails {
+
 		text-align: left;
 		margin-bottom: 5px;
+
 		// Once bigger than `medium`, the sections sit next to each other
 		@include breakpoint($from-medium) {
 			width: 50%;
 			margin-right: 15%;
 		}
+
 		ul {
 			list-style: none;
 			margin: 0px 0px 10px 0px;
 			padding: 0px;
+		}
+		ul:last-child {
+			margin-bottom: 0px;
+		}
+		ul.prompt {
+			//
+		}
+		ul.details {
+			list-style: none;
 			position: relative;
-			overflow: hidden;
+			overflow: auto;
 			li {
 				padding-right: 5px;
 			}
@@ -105,16 +117,19 @@ footer {
 		}
 	}
 	section.grandTotal {
+
 		position: relative;
-		//border: solid 1px #aaa;
+
 		// Removing the float will fill the space to the right of the first section
 		@include breakpoint($from-medium) {
 			float: none;
 			overflow: auto;
 		}
-		>ul {
+		ul {
+
 			margin: 0px;
 			padding: 0px;
+
 			// For `large` and greater, move total to left of button
 			@include breakpoint($from-medium) {
 				float: left;
@@ -136,6 +151,9 @@ footer {
 				font-weight: bold;
 				font-size: 1.4em;
 			}
+		}
+		ul.zero {
+			color: white;
 		}
 		@include breakpoint($from-medium) {
 			button {
@@ -159,5 +177,6 @@ footer {
 		text-transform: uppercase;
 		width: 100%;
 		height: 58px;
+		margin-bottom: 4px; // Expose the box shadow if a parent element chops it off
 	}
 }
